# ll-parser-generator

./: Cargo.toml  README.md
docs/: Checkpoint.md  Checkpoint_feedback.txt  Final.md  Final_comments.txt  Proposal.md  Proposal_feedback.txt
examples/manual-parser/: ast.rs  main.rs  parser.rs
manual-parser/: Cargo.toml
manual-parser/src/: lexer.rs  main.rs  parser.rs
src/: ast.rs  grammar_tests.rs  lexer.rs  lib.rs  ll_table_gen.rs  main.rs  parser.lalrpop  parsing.rs
tests/: arithmetic.rs  parenthesized_numbers.rs
