[package]
name = "ll-parser-generator"
version = "0.1.0"
authors = ["Mark Drobnak <mtd8050@rit.edu>", "Amar Shehzad <as2607@rit.edu>"]
edition = "2018"

[lib]
proc-macro = true

[workspace]
members = ["manual-parser"]

[dependencies]
logos = "0.12"
lalrpop-util = "0.19"
proc-macro2 = "1.0"
quote = "1.0"

[build-dependencies]
lalrpop = "0.19"